Added typeface styles

--- a/plugins/media-text/src/media-text/style.scss
+++ b/plugins/media-text/src/media-text/style.scss
@@ -90,6 +90,10 @@
       width: 100%;
     }
 
+    .c-media-text__heading {
+      font-size: var(--font-section-heading);
+    }
+
     &--content {
       padding-right: 100px;
 
