--- a/plugins/testimonials/src/testimonials/style.scss
+++ b/plugins/testimonials/src/testimonials/style.scss
@@ -36,6 +36,10 @@
     color: #fff;
   }
 
+  .c-testimonials__heading {
+    font-size: var(--font-section-heading);
+  }
+
   &__gradient {
     display: block;
     position: absolute;
