--- a/plugins/venues/src/venues/style.scss
+++ b/plugins/venues/src/venues/style.scss
@@ -27,4 +27,8 @@
     border-radius: 60px;
     background-color: var(--brand-1);
   }
+
+  .c-venues__heading {
+    font-size: var(--font-section-heading);
+  }
 }
