--- a/plugins/team-members/src/team-members/style.scss
+++ b/plugins/team-members/src/team-members/style.scss
@@ -43,4 +43,8 @@
   .c-team-members__heading {
     font-size: var(--font-section-heading);
   }
+
+  .c-team-members__subheading {
+    font-size: var(--font-page-hero-lead);
+  }
 }
