--- a/themes/achieve-arts/src/scss/helper/_button.scss
+++ b/themes/achieve-arts/src/scss/helper/_button.scss
@@ -1,13 +1,15 @@
 %button {
-  min-height: 3.125rem;
+  min-height: 42px;
   min-width: 11.25rem;
   display: inline-flex;
   justify-content: center;
   align-items: center;
   border-radius: 3rem;
-  font-size: var(--text-button);
+  font-size: var(--font-button);
   font-family: var(--font-heading);
+  line-height: 1;
   font-weight: 800;
+  text-align: center;
   text-transform: uppercase;
   padding: var(--padding-button);
   background-color: var(--brand-2);
