--- a/themes/achieve-arts/src/scss/pages/_team-members.scss
+++ b/themes/achieve-arts/src/scss/pages/_team-members.scss
@@ -56,7 +56,7 @@
     }
 
     &--content-area {
-      font-size: 20px;
+      font-size: var(--font-page-hero-lead);
       font-weight: 400;
 
       >p {
