--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -81,6 +81,7 @@ h1, h2, h3, h4, h5, h6 {
   --font-section-heading: 88px;
   --font-page-hero-heading: 95px;
   --font-page-hero-lead: 21px;
+  --font-media-carousel-item-heading: 78px;
   --font-button: 22px;
   --padding-button: 6px 25px;
   --spacing-para: 15px;
