--- a/themes/achieve-arts/src/scss/components/_arrows.scss
+++ b/themes/achieve-arts/src/scss/components/_arrows.scss
@@ -1,9 +1,18 @@
+@use '../abstracts';
+
+
 .c-arrows {
   .c-arrows__arrow {
     width: 60px;
     height: 60px;
     opacity: 1;
     background-color: var(--brand-2);
+
+    @include abstracts.respond-to('tablet') { 
+      width: 40px;
+      height: 40px;
+      padding: 8px;
+    }
 
     svg {
       fill: #fff;
@@ -13,12 +22,12 @@
       opacity: 1;
     }
 
-    &.c-arrows__arrow--prev {
-      left: -40px;
-    }
+    // &.c-arrows__arrow--prev {
+    //   left: -40px;
+    // }
 
-    &.c-arrows__arrow--next {
-      right: -40px;
-    }
+    // &.c-arrows__arrow--next {
+    //   right: -40px;
+    // }
   }
 }
