--- a/plugins/media-carousel-item/src/media-carousel-item/style.scss
+++ b/plugins/media-carousel-item/src/media-carousel-item/style.scss
@@ -7,7 +7,7 @@
 
 .c-media-carousel-item {
 	aspect-ratio: 16 / 9;
-	border-radius: 34px;
+	border-radius: var(--border-radius-small);
 	overflow: hidden;
 
 	&__media,
