--- a/plugins/cta/src/cta/style.scss
+++ b/plugins/cta/src/cta/style.scss
@@ -10,13 +10,15 @@
 	&__inner {
 		background-color: var(--brand-1);
 		max-width: var(--max-width-cta);
-		border-radius: var(--border-radius-cta);
+		border-radius: var(--border-radius-small);
 		margin-left: auto;
 		margin-right: auto;
+		position: relative;
 	}
 
 	&__container {
 		position: relative;
+		z-index: 1;
 		padding: var(--container-padding-cta);
 	}
 
@@ -29,7 +31,7 @@
 	}
 
 	.c-cta__heading {
-		font-size: var(--heading-cta);
+		font-size: var(--font-heading-cta);
 		font-weight: 800;
 	}
 
@@ -100,6 +102,22 @@
 			height: 100%;
 			object-fit: contain;
 			object-position: center;
+		}
+	}
+
+	&__bg {
+		position: absolute;
+		right: 0;
+		top: 0;
+		width: 45%;
+		height: 100%;
+		border-top-right-radius: var(--border-radius-small);
+		border-bottom-right-radius: var(--border-radius-small);
+		overflow: hidden;
+
+		svg {
+			width: 100%;
+			height: 100%;
 		}
 	}
 }
