--- a/plugins/page-hero/src/page-hero/style.scss
+++ b/plugins/page-hero/src/page-hero/style.scss
@@ -106,6 +106,8 @@
 
     &--content {
       padding-right: 100px;
+      position: relative;
+      z-index: 1;
 
       @include abstracts.respond-to('tablet') { 
         padding-right: 0;
@@ -135,6 +137,7 @@
         aspect-ratio: 1 / 1;
         border-radius: 40px;
         overflow: hidden;
+        position: relative;
 
         @include abstracts.respond-to('tablet') { 
           border-radius: 26px;
@@ -147,6 +150,18 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+      }
+
+      &-bg {
+        position: absolute;
+        left: -150px;
+        top: -150px;
+        width: calc(100% + 300px);
+
+        svg {
+          fill: #fff;
+          opacity: 0.1;
+        }
       }
     }
   }
