--- a/plugins/page-hero/src/page-hero/style.scss
+++ b/plugins/page-hero/src/page-hero/style.scss
@@ -133,7 +133,8 @@
         width: 100%;
       }
 
-      picture {
+      picture,
+      video {
         aspect-ratio: 1 / 1;
         border-radius: 40px;
         overflow: hidden;
@@ -145,7 +146,8 @@
       }
 
       picture,
-      img {
+      img,
+      video {
         display: block;
         width: 100%;
         height: 100%;
