--- a/plugins/page-hero/src/page-hero/style.scss
+++ b/plugins/page-hero/src/page-hero/style.scss
@@ -154,6 +154,24 @@
         object-fit: cover;
       }
 
+      &-top-right {
+        position: absolute;
+        aspect-ratio: 1 / 1;
+        width: 250px;
+        top: 0;
+        right: 0;
+        z-index: 2;
+      }
+
+      &-bottom-left {
+        position: absolute;
+        aspect-ratio: 1 / 1;
+        width: 250px;
+        bottom: 0;
+        left: 0;
+        z-index: 3;
+      }
+
       &-bg {
         position: absolute;
         left: -150px;
