--- a/plugins/media-carousel-item/src/media-carousel-item/style.scss
+++ b/plugins/media-carousel-item/src/media-carousel-item/style.scss
@@ -5,6 +5,8 @@
  * Replace them with your own styles or remove the file completely.
  */
 
+@use '../../../../themes/achieve-arts/src/scss/abstracts';
+
 .c-media-carousel-item {
 	aspect-ratio: 16 / 9;
 	border-radius: var(--border-radius-small);
@@ -87,7 +89,7 @@
 .c-media-carousel-item-spotlight {
 	&__inner {
 		background-color: #000;
-		border-radius: 35px;
+		border-radius: var(--border-radius-small);
 		position: relative;
 		overflow: hidden;
 		z-index: 1;
@@ -97,19 +99,47 @@
 		padding: 40px 60px;
 		position: relative;
 		z-index: 2;
+
+		@include abstracts.respond-to('laptop') { 
+			padding: 40px;
+    }
+
+		@include abstracts.respond-to('tablet') { 
+			padding: 40px 30px;
+    }
 	}
 
 	&__items {
 		display: flex;
 		justify-content: space-between;
+
+		@include abstracts.respond-to('laptop') { 
+			flex-direction: column;
+    }
 	}
 
 	&__content {
 		width: 350px;
+
+		@include abstracts.respond-to('desktop') { 
+			width: 300px;
+    }
+
+		@include abstracts.respond-to('laptop') { 
+			width: 100%;
+    }
 	}
 
 	&__header {
-		margin-bottom: 35px;
+		margin-bottom: 45px;
+
+		@include abstracts.respond-to('laptop') { 
+			margin-bottom: 35px;
+    }
+
+		@include abstracts.respond-to('tablet') { 
+			margin-bottom: 25px;
+    }
 
 		>* {
 			&:first-child {
@@ -124,13 +154,21 @@
 
 	.c-media-carousel-item-spotlight__tab {
 		margin-bottom: 35px;
+
+		@include abstracts.respond-to('laptop') { 
+			margin-bottom: 35px;
+    }
+
+		@include abstracts.respond-to('tablet') { 
+			margin-bottom: 25px;
+    }
 	}
 
 	&__heading {
 		font-weight: 400;
 		color: var(--brand-8);
 		font-family: var(--font-body);
-		font-size: 17px;
+		font-size: var(--font-team-members-item-role);
 		margin-bottom: 10px;
 	}
 
@@ -138,15 +176,29 @@
 		font-size: 50px;
 		font-weight: 800;
 		color: #fff;
+
+		@include abstracts.respond-to('laptop') { 
+			font-size: 40px;
+    }
+
+		@include abstracts.respond-to('tablet') { 
+			font-size: 30px;
+    }
 	}
 
 	&__media {
 		aspect-ratio: 1 / 1;
-		width: 50%;
+		width: 60%;
+		max-width: 480px;
 		flex-grow: 0;
 		transform: rotate(5deg);
 		margin-top: 40px;
 		margin-bottom: 40px;
+
+		@include abstracts.respond-to('laptop') { 
+			max-width: none;
+			width: 100%;
+    }
 
 		picture,
 		img {
@@ -154,7 +206,7 @@
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
-			border-radius: 30px;
+			border-radius: var(--border-radius-small);
 		}
 	}
 
