--- a/plugins/media-carousel-item/src/media-carousel-item/style.scss
+++ b/plugins/media-carousel-item/src/media-carousel-item/style.scss
@@ -153,6 +153,7 @@
 	}
 
 	.c-media-carousel-item-spotlight__tab {
+		background-color: var(--brand-1);
 		margin-bottom: 35px;
 
 		@include abstracts.respond-to('laptop') { 
@@ -207,6 +208,28 @@
 			height: 100%;
 			object-fit: cover;
 			border-radius: var(--border-radius-small);
+		}
+
+		&--top-left {
+			position: absolute;
+			aspect-ratio: 1 / 1;
+			width: 45%;
+			max-width: 250px;
+			top: -30px;
+			left: -30px;
+			z-index: 2;
+			transform: rotate(-10deg);
+		}
+
+		&--bottom-right {
+			position: absolute;
+			aspect-ratio: 1 / 1;
+			width: 45%;
+			max-width: 250px;
+			bottom: -30px;
+			right: -30px;
+			z-index: 3;
+			transform: rotate(-10deg);
 		}
 	}
 
