--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -8,6 +8,7 @@
 @use './helper/tab';
 @use './helper/button';
 
+@use './pages/default';
 @use './pages/team-members';
 
 @use './components/alert';
