--- a/plugins/hero-home/src/hero-home/style.scss
+++ b/plugins/hero-home/src/hero-home/style.scss
@@ -1,4 +1,4 @@
-@use '../abstracts';
+@use '../../../../themes/achieve-arts/src/scss/abstracts';
 
 .c-hero-home {
   background-color: #000;
@@ -85,92 +85,6 @@
   &__scroller {
     position: relative;
     z-index: 1;
-
-    &--item {
-      aspect-ratio: 5 / 6;
-      width: 20rem;
-
-      @include abstracts.respond-to('laptop') { 
-        width: 15rem;
-      }
-
-      a {
-        display: block;
-        height: 100%;
-        color: #fff;
-        text-decoration: none;
-      }
-
-
-      &-inner {
-        height: inherit;
-        border-radius: var(--border-radius-small);
-        background-color: var(--brand-1);
-        position: relative;
-        overflow: hidden;
-      }
-
-      &-container {
-        height: inherit;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-start;
-        position: relative;
-        z-index: 2;
-      }
-
-      &-header {
-        padding: 1.875rem;
-
-        @include abstracts.respond-to('laptop') { 
-          padding: 1.375rem;
-        }
-      }
-
-      &-heading {
-        font-size: var(--font-hero-home-scroller-item-heading);
-        font-weight: 800;
-      }
-
-      &-media {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        transition: transform 0.25s ease-in-out;
-
-        picture,
-        img {
-          display: block;
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-      }
-
-      &-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(0deg,rgba(97, 45, 136, 1) 0%, rgba(97, 45, 136, 0) 100%);
-        opacity: 1;
-        transition: opacity 0.25s ease-in-out;
-
-      }
-
-      &:hover &-media {
-        transform: scale(1.05);
-      }
-
-      &:hover &-overlay {
-        opacity: 0;
-      }
-    }
   }
 
   &__gradient {
