Added home hero style fixes

--- a/plugins/hero-home-item/src/hero-home-item/editor.scss
+++ b/plugins/hero-home-item/src/hero-home-item/editor.scss
@@ -4,6 +4,6 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-bwp-hero-home-item {
-	border: 1px dotted #f00;
+.c-hero-home-item {
+	grid-column: span 1;
 }
