--- a/plugins/hero-home/src/hero-home/style.scss
+++ b/plugins/hero-home/src/hero-home/style.scss
@@ -33,6 +33,7 @@
       font-size: var(--font-hero-home-intro);
       font-weight: 400;
       margin-bottom: var(--spacing-para);
+      line-height: 1.3;
     }
 
     > h2,
