border radius helpers

--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -333,3 +333,15 @@ h2 {
   }
 }
 
+.border-radius-none {
+  &__top {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  &__bottom {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+}
+
