--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -357,3 +357,20 @@ h2 {
   }
 }
 
+.backing {
+  &__brand-4 {
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: var(--brand-4);
+      z-index: 1;
+    }
+  }
+}
+
