border radius styling fix

--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -361,7 +361,7 @@ h2 {
   &__brand-4 {
     position: relative;
 
-    &::after {
+    &::before {
       content: '';
       position: absolute;
       left: 0;
