--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -90,6 +90,7 @@ h1, h2, h3, h4, h5, h6 {
   --padding-button: 6px 25px;
   --spacing-para: 15px;
   --spacing-header: 30px;
+  --border-radius-large: 60px;
   --border-radius-small: 40px;
   --container-padding-content: 30px;
   --max-width-media-text: 1360px;
@@ -127,6 +128,7 @@ h1, h2, h3, h4, h5, h6 {
     --font-section-heading: 68px;
     --font-page-hero-heading: 74px;
     --font-heading-cta: 52px;
+    --border-radius-large: 50px;
     --border-radius-small: 35px;
     --font-team-members-item-heading: 28px;
     --font-team-members-item-role: 16px;
@@ -162,6 +164,7 @@ h1, h2, h3, h4, h5, h6 {
     --font-page-hero-heading: 60px;
     --font-heading-cta: 44px;
     --font-team-members-item-heading: 24px;
+    --border-radius-large: 40px;
     --border-radius-small: 25px;
     --container-padding-content: 20px;
   }
