--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -88,6 +88,7 @@ h1, h2, h3, h4, h5, h6 {
   --font-heading-cta: 60px;
   --font-button: 22px;
   --padding-button: 6px 25px;
+  --spacing-block: 110px;
   --spacing-para: 15px;
   --spacing-header: 30px;
   --border-radius-large: 60px;
@@ -105,7 +106,6 @@ h1, h2, h3, h4, h5, h6 {
   --text-button: 1.5rem;
 
   --hamburger: 3.375rem;
-  --spacing-block: 4.125rem;
   // --spacing-header: 2.875rem;
 
 
