--- a/plugins/panel/src/panel/style.scss
+++ b/plugins/panel/src/panel/style.scss
@@ -14,6 +14,8 @@
   }
 
   &__items {
+    position: relative;
+    z-index: 2;
     >* {
       max-width: 800px;
       margin-left: auto;
@@ -33,5 +35,21 @@
   &.c-panel__bgcolour--purple {
     background-color: var(--brand-4);
     color: #fff;
+  }
+
+  &__container {
+    position: relative;
+  }
+
+  &__star {
+    display: none;
+
+    .c-panel__home & {
+      display: block;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      z-index: 1;
+    }
   }
 }
