--- a/plugins/avatar/src/avatar/style.scss
+++ b/plugins/avatar/src/avatar/style.scss
@@ -5,8 +5,72 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-bwp-avatar {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+@use '../../../../themes/achieve-arts/src/scss/abstracts';
+
+.c-avatar {
+	margin-top: var(--spacing-header);
+	margin-bottom: var(--spacing-header);
+
+	&__items {
+		display: flex;
+		align-items: center;
+	}
+
+	&__item--media {
+		flex-shrink: 0;
+		width: 130px;
+		height: 130px;
+		border-radius: 50%;
+		overflow: hidden;
+		border: 5px solid var(--brand-2);
+
+		@include abstracts.respond-to('desktop') { 
+			width: 100px;
+			height: 100px;
+			border-width: 4px;
+    }
+
+		@include abstracts.respond-to('tablet') { 
+			width: 80px;
+			height: 80px;
+			border-width: 3px;
+    }
+
+		picture,
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	&__item--content {
+		padding-left: var(--spacing-header);
+	}
+
+	&__name {
+		font-size: 26px;
+		font-weight: 500;
+
+		@include abstracts.respond-to('desktop') { 
+      font-size: 23px;
+    }
+
+		@include abstracts.respond-to('tablet') { 
+      font-size: 20px;
+    }
+	}
+
+	&__role {
+		font-size: 19px;
+
+		@include abstracts.respond-to('desktop') { 
+      font-size: 17px;
+    }
+
+		@include abstracts.respond-to('tablet') { 
+      font-size: 14px;
+    }
+	}
 }
