--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -20,5 +20,5 @@
 @use './components/arrows';
 @use './components/insta';
 // @use './components/media-text';
-@use './components/news-feed';
+// @use './components/news-feed';
 @use './components/footer';
