--- a/plugins/news-feed/src/news-feed/editor.scss
+++ b/plugins/news-feed/src/news-feed/editor.scss
@@ -4,6 +4,10 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-bwp-news-feed {
-	border: 1px dotted #f00;
+.c-news-feed {
+	&__scroller {
+		display: grid;
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+		gap: 12px;
+	}
 }
