--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -14,6 +14,7 @@
 @use './components/alert';
 @use './components/hamburger';
 @use './components/header';
+@use './components/mobile-menu';
 // @use './components/hero-home';
 // @use './components/team-members';
 // @use './components/video-carousel';
