--- a/plugins/news-feed/src/news-feed/style.scss
+++ b/plugins/news-feed/src/news-feed/style.scss
@@ -67,11 +67,12 @@
       }
     }
 
-    &--tab {
+    .c-news-feed__card--tab {
       position: absolute;
       top: 20px;
       left: 30px;
-      min-width: 160px;
+      min-width: 150px;
+      background-color: var(--brand-1);
     }
 
     &--header {
