Added archive card

--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -10,6 +10,7 @@
 
 @use './pages/default';
 @use './pages/team-members';
+@use './pages/archive';
 
 @use './components/alert';
 @use './components/hamburger';
